# release-test

./: main.py  pyproject.toml
.github/workflows/: realease.yml  release.yml
src/test/: main.py
